5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1601_1800.log
== SUBMITION (2019-03-25 18:45:08) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=(numberA**3)+(numberB**2)+(numberC**2)
div=int(numberA+numberB+numberC)
result=quo/div
print(round(result,7))
-- EXECUTION TIME:
0.144488
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:45:38) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=(numberA**3)+(numberB**2)+(numberC**2))
div=int(numberA+numberB+numberC)
result=quo/div
print(round(result,7))
-- EXECUTION TIME:
0.148317
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:21:57) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=(numberA**3)+(numberB**2)+(numberC**2))
div=int(numberA+numberB+numberC)
result=quo/div
print(round(result,7))
-- EXECUTION TIME:
0.178791
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:23:09) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=((numberA**3)+(numberB**2)+(numberC**2))
div=int(numberA+numberB+numberC)
result=quo/div
print(round(result,7))
-- EXECUTION TIME:
0.141196
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:23:45) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=((numberA**3)+(numberB**2)+(numberC**2))
div= int(numberA+numberB+numberC)
result=quo/div
print(round(result,7))
-- EXECUTION TIME:
0.184889
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:32) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=((numberA**3)+(numberB**2)+(numberC**2))
div= int(numberA+numberB+numberC)
result=quo/div
print(round(result,6))

-- EXECUTION TIME:
0.207326
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 17:53:54) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=((numberA**3)+(numberB**2)+(numberC**2))
div= int(numberA+numberB+numberC)
result=quo/div
print(round(result,6))

-- EXECUTION TIME:
0.149391
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 17:54:12) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=((numberA**3)+(numberB**2)+(numberC**2))
div= int(numberA+numberB+numberC)
result=quoc/div
print(round(result,6))

-- EXECUTION TIME:
0.15288
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 17:54:41) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=((numberA**3)+(numberB**2)+(numberC**2))
div= int(numberA+numberB+numberC)
result=quoc/div
print(round(result ,7))

-- EXECUTION TIME:
0.130045
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:54:46) 
-- CODE:
numberA= float(input("A:"))
numberB float(input("B"))
numberC float(input("C"))
quoc=((numberA**3)+(numberB**2)+(numberC**2))
div= int(numberA+numberB+numberC)
result=quoc/div
print(round(result ,7))

-- ERROR:
File "XXXX", line 2
    numberB float(input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:56:08) 
-- CODE:
numberA = int(input("A:"))
numberB = int(input("B"))
numberC = int(input("C"))
quoc = ((numberA**3)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result=quoc/div
print(round(result ,7))

-- OUTPUT:
127.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:56:08) 
-- CODE:
numberA = int(input("A:"))
numberB = int(input("B"))
numberC = int(input("C"))
quoc = ((numberA**3)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result=quoc/div
print(round(result ,7))

-- OUTPUT:
127.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 17:56:14) 
-- CODE:
numberA = int(input("A:"))
numberB = int(input("B"))
numberC = int(input("C"))
quoc = ((numberA**3)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result=quoc/div
print(round(result ,7))

-- EXECUTION TIME:
0.15241
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
127.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
13462.3096447
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
3506.6226415
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:56:16) 
-- CODE:
numberA = int(input("A:"))
numberB = int(input("B"))
numberC = int(input("C"))
quoc = ((numberA**3)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result=quoc/div
print(round(result ,7))

-- OUTPUT:
127.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 17:56:42) 
-- CODE:
numberA = int(input("A:"))
numberB = int(input("B"))
numberC = int(input("C"))
quoc = ((numberA**3)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result=quoc/div
print(round(result ,7))

-- EXECUTION TIME:
0.20484
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
127.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
13462.3096447
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
3506.6226415
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 17:57:15) 
-- CODE:
numberA = int(input("A:"))
numberB = int(input("B"))
numberC = int(input("C"))
quoc = ((numberA**3)+(numberB**2)+(numberC**2))
div = (numberA+numberB+numberC)
result = quoc/div
print = (round(result ,7))

-- EXECUTION TIME:
0.205132
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:

-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:57:42) 
-- CODE:
numberA = int(input("A: "))
numberB = int(input("B: "))
numberC = int(input("C: "))
quoc = ((numberA**3)+(numberB**2)+(numberC**2))
div = (numberA+numberB+numberC)
result = quoc/div
print = (round(result ,7))

-- OUTPUT:
127.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 17:59:35) 
-- CODE:
numberA = int(input("A: "))
numberB = int(input("B: "))
numberC = int(input("C: "))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = (numberA+numberB+numberC)
result = quoc/div
print = (round(result ,7))

-- EXECUTION TIME:
0.187445
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:

-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:01:10) 
-- CODE:
numberA = int(input("A: "))
numberB = int(input("B: "))
numberC = int(input("C: "))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))/(numberA+numberB+numberC)
print = (round(quoc ,7))

-- EXECUTION TIME:
0.134915
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:

-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:01:14) 
-- CODE:
numberA = int(input("A: "))
numberB = int(input("B: "))
numberC = int(input("C: "))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))/(numberA+numberB+numberC)
print = (round(quoc ,7))

-- OUTPUT:
127.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:01:24) 
-- CODE:
numberA = int(input("A: "))
numberB = int(input("B: "))
numberC = int(input("C: "))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))/(numberA+numberB+numberC)
print = (round(quoc ,7))

-- OUTPUT:
127.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:03:08) 
-- CODE:
a = int(input("A: "))
b = int(input("B: "))
c = int(input("C: "))
quoc = ((a**2)+(b**2)+(c**2)/(a+b+c))
print = (round(quoc ,7))

-- OUTPUT:
127.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:04:00) 
-- CODE:
a = int(input("A: "))
b = int(input("B: "))
c = int(input("C: "))
quoc = ((a**2)+(b**2)+(c**2)/(a+b+c))
print(round(quoc ,7))

-- EXECUTION TIME:
0.260031
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.3654822
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0188679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:04:30) 
-- CODE:
a = int(input("A: "))
b = int(input("B: "))
c = int(input("C: "))
quoc = ((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(quoc ,7))

-- EXECUTION TIME:
0.126055
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
